# prj-datathon

./: .dockerignore  .env.example  .gitignore  BASE DE DADOS PEDE 2024 - DATATHON.xlsx  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: auth.py  main.py  router.py  schemas.py  state.py
app/models/: risk_model.joblib
dashboard/: app.py
data/: reference_data.csv
metrics/: Metricas.json
notebooks/: eda_datathon_2024.ipynb  eda_datathon_2024_v2.ipynb  ml_forecasting_prototype.ipynb  ml_forecasting_prototype_v2.ipynb
scripts/: extract_reference_data.py  predict_2024.py
src/: config.py  data_loader.py  evaluation.py  feature_engineering.py  modeling.py  preprocessing.py  train_pipeline.py  utils.py
tests/: conftest.py  test_api_auth.py  test_api_prediction.py  test_data_loader.py  test_evaluation.py  test_feature_engineering_logic.py  test_modeling.py  test_preprocessing.py  test_train_pipeline.py
